# LLM-time-series-forecasting

./: .gitignore  Flops_tracker.xlsx  LICENCE  LoRA_FLOPs_plan.xlsx  README.md  environment.yaml  preprocessed_data.npy  pyproject.toml  pytest.ini  requirements.txt  setup.py
notebooks/: 3a.ipynb  3b.ipynb  3c_final_model.ipynb  FLOPs_allocation.ipynb  Untrained_Qwen.ipynb  data_inspection.ipynb  lora_training.ipynb  setup_jupyter.sh
notebooks/.ipynb_checkpoints/: data_inspection-checkpoint.ipynb
report/: references.bib  report.tex
src/: compute_flops.py  evaluate_qwen.py  final_model.py  flops_model.py  generate_predictions.py  load_qwen.py  postprocess.py  preprocessor.py  run_compute_flops.py  train_lora_model.py
tests/: test_compute_flops.py  test_evaluate_qwen.py  test_flops_model.py  test_load_qwen.py  test_postprocessor.py  test_preprocessor.py  test_preprocessor_postprocessor.py
