[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m2-coursework"
version = "0.1.0"
description = "LLMTIME-based preprocessing and evaluation pipeline for Qwen2.5 model."
authors = [{ name = "Raunaq Rai", email = "rsr45@cam.ac.uk" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "transformers>=4.38.0",
    "scikit-learn>=1.4.0",
    "h5py>=3.10.0",
    "pytest>=8.3.3",
    "mock>=5.0.0"
]

