k[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m2-coursework"
version = "0.1.0"
description = "LoRA-based time-series forecasting using Qwen2.5 and LLMTIME"
authors = [
    { name = "Raunaq Rai", email = "your.email@domain.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "h5py",
    "scikit-learn",
    "torch",
    "accelerate",
    "tqdm",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]

